--- a/ContosoUniversity/Views/Instructors/Create.cshtml
+++ b/ContosoUniversity/Views/Instructors/Create.cshtml
@@ -47,7 +47,7 @@
                                     {
                                         @:</tr><tr>
                                     }
-                                    @:<td>
+                                    @:<td style="padding:20px;">
                                         <input type="checkbox"
                                                name="selectedCourses"
                                                value="@course.CourseID"
